development-code/debugging/tsfc-bug/compile-errors.txt
/home/owen/progs/firedrake-complex/firedrake/.cache/pyop2/625ebc7a6a95e01f63eb28fe45fc01c3_p31518.c: In function ‘form0_cell_integral_otherwise’:
/home/owen/progs/firedrake-complex/firedrake/.cache/pyop2/625ebc7a6a95e01f63eb28fe45fc01c3_p31518.c:17:33: error: invalid operands to binary >= (have ‘complex double’ and ‘int’)
   double complex  t4  = ((((t3) >= (0))) && (((t3) <= (1))) ? 1 : 0);
                                 ^
/home/owen/progs/firedrake-complex/firedrake/.cache/pyop2/625ebc7a6a95e01f63eb28fe45fc01c3_p31518.c:17:52: error: invalid operands to binary <= (have ‘complex double’ and ‘int’)
   double complex  t4  = ((((t3) >= (0))) && (((t3) <= (1))) ? 1 : 0);
                                                    ^
/home/owen/progs/firedrake-complex/firedrake/.cache/pyop2/625ebc7a6a95e01f63eb28fe45fc01c3_p31518.c:23:0: warning: ignoring #pragma coffee expression [-Wunknown-pragmas]
     #pragma coffee expression
 ^
/home/owen/progs/firedrake-complex/firedrake/.cache/pyop2/625ebc7a6a95e01f63eb28fe45fc01c3_p31518.c: In function ‘wrap_form0_cell_integral_otherwise’:
/home/owen/progs/firedrake-complex/firedrake/.cache/pyop2/625ebc7a6a95e01f63eb28fe45fc01c3_p31518.c:70:18: warning: unused variable ‘ierr’ [-Wunused-variable]
   PetscErrorCode ierr;
                  ^
/home/owen/progs/firedrake-complex/firedrake/.cache/pyop2/625ebc7a6a95e01f63eb28fe45fc01c3_p31518.c: At top level:
/home/owen/progs/firedrake-complex/firedrake/.cache/pyop2/625ebc7a6a95e01f63eb28fe45fc01c3_p31518.c:43:23: warning: ‘apply_extruded_mask’ defined but not used [-Wunused-function]
 static PetscErrorCode apply_extruded_mask(PetscSection section,
                       ^
